-
Bug
-
Resolution: Fixed
-
P4
-
10, 11, 12
-
b20
-
generic
-
windows
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8238610 | 11.0.8-oracle | Ambarish Rapte | P4 | Resolved | Fixed | b01 |
JDK-8240088 | 11.0.8 | Ambarish Rapte | P4 | Resolved | Fixed | b01 |
When we run java/awt/Menu/WrongParentAfterRemoveMenu/WrongParentAfterRemoveMenu.java in Windows 7 machine in jtreg it creates "AWT Assertion failure popup" and times out and jtreg throws error
- backported by
-
JDK-8238610 java/awt/Menu/WrongParentAfterRemoveMenu/WrongParentAfterRemoveMenu.java debug assert on Windows
-
- Resolved
-
-
JDK-8240088 java/awt/Menu/WrongParentAfterRemoveMenu/WrongParentAfterRemoveMenu.java debug assert on Windows
-
- Resolved
-
- links to