src/java.desktop/windows/native/libawt/windows/awt_MenuBar.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1996, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1996, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -206,7 +206,10 @@ void AwtMenuBar::DeleteItem(UINT index)
  * this function must be called to draw the changed menu bar.
  */
 void AwtMenuBar::RedrawMenuBar() {
-    VERIFY(::DrawMenuBar(GetOwnerHWnd()));
+    HWND hOwnerWnd = GetOwnerHWnd();
+    if (hOwnerWnd != NULL) {
+        VERIFY(::DrawMenuBar(hOwnerWnd));
+    }
 }
 
 void AwtMenuBar::_AddMenu(void *param)
